--- a/style.css
+++ b/style.css
@@ -43,6 +43,28 @@ body {
 	align-items: center;
 }
 
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -3;
+  opacity:5%;
+}
+
+.intro {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.8s ease;
+}
+
+.intro.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 nav {
 	position: fixed;
 	top: 0;
@@ -137,10 +159,10 @@ nav li {
 }
 
 nav a.anim-ul {
-  position: relative;        /* needed for ::after */
-  text-decoration: none;     /* remove default underline */
+  position: relative;        
+  text-decoration: none;    
   color: #fff;
-  display: inline-block;     /* makes ::after position correctly */
+  display: inline-block;     
   padding: 0px 0;
   transition: transform 0.2s ease;
 }
@@ -150,23 +172,23 @@ nav a.anim-ul::after {
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 100%;               /* full width of text */
-  height: 2px;               /* thickness of underline */
+  width: 100%;               
+  height: 2px;               
   background: var(--accent);
   box-shadow:0 0 20px var(--accent);
-  transform: scaleX(0);      /* start hidden */
-  transform-origin: center;   /* scale from left side */
-  transition: transform 0.3s ease; /* smooth animation */
+  transform: scaleX(0);      
+  transform-origin: center;   
+  transition: transform 0.3s ease; 
 }
 
 nav a.anim-ul:hover {
 	color:var(--primary-glow);
 	text-shadow:0 0 20px var(--glow-cyan);
-	transform: scale(1.1);     /* small text scale on hover */
+	transform: scale(1.1);   
 }
 
 nav a.anim-ul:hover::after {
-  transform: scaleX(1);    /* animate to full width on hover */
+  transform: scaleX(1);    
 }
 
 .logo {
@@ -203,7 +225,7 @@ nav a.anim-ul:hover::after {
 		linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
 	background-size: 80px 80px;
 	pointer-events: none;
-	z-index: 1;
+	z-index: 0;
 }
 
 .cmc-desc {
