--- a/style.css
+++ b/style.css
@@ -292,21 +292,31 @@ h1{
 .defdesc {
 	font-size: 20px;
 	margin-bottom: 5px;
+	margin-top:10px;
 }
+
+.staff-info .ign {
+	margin-top:5px;
+	font-weight: bold;
+	font-size: 1.1em;
+}
+
+
 
 .menu-grid {
 	display: grid;
-	grid-template-columns: repeat(2, 204px);
-	gap: 25px;
-	margin: 20px auto;
+	grid-template-columns: repeat(auto-fit, 160px);
+	gap: 0px;
+	margin: 0px auto;
 	justify-content: center;
+	max-width: calc(10 * 204px + 9 * 25px);
 }
 
 .menu-item {
-	height: 270px;
+	width:180px;
 	background: var(--glass-bg);
-	backdrop-filter: blur(2px);
-	-webkit-backdrop-filter: blur(2px);
+	backdrop-filter: blur(20px);
+	-webkit-backdrop-filter: blur(20px);
 	border: 1px solid var(--glass-border);
 	border-radius: 24px;
 	display: flex;
@@ -320,21 +330,25 @@ h1{
 	opacity: 100;
 	z-index:2;
 	padding-bottom: 0px;
+	padding:20px 20px;
 	transition: box-shadow 0.3s ease, opacity 0.3s ease, border .3s ease, transform .3s ease;
+	transform:scale(0.8);
 }
 
 .menu-item:hover {
 	opacity: 100;
 	box-shadow: 0 0 20px var(--glow-cyan);
 	border:2px solid var(--accent);
-	transform:scale(1.1);
+	transform:scale(.85);
 	transition: box-shadow 0.3s ease, opacity 0.3s ease, border .1s ease, transform .3s ease;
 }
 
 .menu-item img {
-	width: 130px;
-	height: 130px;
+	width: 100px;
+	height: 100px;
 	margin-bottom: 0px;
+	border-radius: 20%;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.336);
 }
 
 .menu-item p {
@@ -343,5 +357,54 @@ h1{
 	margin: 0;
 	padding:0 15px;
 }
-    
 
+.staff-info .rank {
+	font-size: 0.8em;
+	text-shadow: 0 0 3px rgba(0, 0, 0);
+	width:100px;
+	color: #fff;
+	font-weight: 600;
+	border:1px solid var(--action);
+	border-radius: 25px;
+	padding: 2px 5px;
+	margin-top:5px;
+	margin: 5px auto 0; /* <-- auto left/right centers it */
+	background:linear-gradient(90deg, rgb(255, 153, 0),rgb(255, 187, 0));
+	box-shadow: 0 0 20px var(--action-glow); 
+}
+
+.stafftitle
+{
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.rank.owner {
+	background: linear-gradient(90deg, red, darkred);
+	border:1px solid red;
+	box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+}
+
+.rank.manager {
+	background: linear-gradient(90deg, orange, darkorange);
+	border:1px solid orange;
+	box-shadow: 0 0 20px rgba(255, 165, 0, 0.5);
+}
+
+.rank.developer {
+	background: linear-gradient(90deg, cyan, darkcyan);
+	border:1px solid cyan;
+	box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+}
+
+.rank.admin {
+	background: linear-gradient(90deg, blue, darkblue);
+	border:1px solid blue;
+	box-shadow: 0 0 20px rgba(0, 0, 255, 0.5);
+}
+
+.rank.helper {
+	background: linear-gradient(90deg, magenta, darkmagenta);
+	border:1px solid magenta;
+	box-shadow: 0 0 20px rgba(255, 0, 255, 0.5);
+}
