--- a/style.css
+++ b/style.css
@@ -65,6 +65,111 @@ body {
   transform: translateY(0);
 }
 
+#dcpopup-ovr {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 20;
+}
+
+#dcpopup {
+	background: var(--glass-bg);
+	border: 1px solid var(--glass-border);
+	backdrop-filter: blur(50px);
+	-webkit-backdrop-filter: blur(50px);
+	border-radius: 12px;
+	padding: 20px;
+	width: 800px;
+	max-width: 90%;
+	text-align: center;
+	position: relative;
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.514);
+	flex-direction: column;
+	padding:40px;
+	animation: scaleIn 0.5s cubic-bezier(0.0, 0, 0.2, 1) forwards;
+}
+
+
+.popup-content {
+	display:flex;
+	gap:20px;
+	flex-wrap: wrap;
+	justify-content: space-between;
+  	align-items: flex-start;
+}
+
+.popup-text {
+	flex:1;
+	max-width: calc(100% - 260px);
+	overflow-wrap:break-word;
+}
+
+.popup-text h2 {
+	font-size: 40px;
+	margin-bottom: 20px;
+}
+
+.popup-text p {
+	font-size: 16px;
+	line-height: 1.8;
+}
+
+.popup-discord {
+	width:250px;
+}
+
+@keyframes scaleIn {
+  0% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+}
+
+.popup-text button {
+	margin-top: 50px;
+	padding: 10px 20px;
+	font-size: 16px;
+	color: #fff;
+	font-family: inherit;
+	background: var(--primary);
+	border: none;
+	border-radius: 8px;
+	width:400px;
+	font-weight: 600;
+	text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.8);
+	cursor: pointer;
+	box-shadow: 0 0 20px var(--glow-cyan);
+	transition: background 0.3s ease, box-shadow 0.3s ease, color .3s ease;
+}
+
+.popup-text button:hover {
+	background: var(--primary-glow);
+	box-shadow: 0 0 40px var(--glow-cyan);
+	color:black;
+	transition: background 0.3s ease, box-shadow 0.3s ease, color .3s ease;
+}
+
+#popup-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  color: #fff;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
 nav {
 	position: fixed;
 	top: 0;
