--- a/style.css
+++ b/style.css
@@ -513,3 +513,5 @@ h1{
 	border:1px solid magenta;
 	box-shadow: 0 0 20px rgba(255, 0, 255, 0.5);
 }
+
+/* gotta be really bored to read all this */ 
