--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ h1{
 		font-size: 16px;
 		text-align: center;
 		width:100%;
-		padding:0 20px;
+		padding:10px 20px;
 	}
 	.menu-item {
 		width: 100%;
